tests/fixtures/invalid/missing_meta.ko
// This module intentionally lacks a meta block.
// ERROR E0210
module no_meta {
    fn main() {
    }
}
